--- a/views/pokeneas/imageAndPhrase.ejs
+++ b/views/pokeneas/imageAndPhrase.ejs
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div>
-        <img src="<%= imagen %>" alt="Pokenea Image" style="height: 500px;" />
-        <p>Frase Filosófica: <%= fraseFilosofica %></p>
+        <img src="<%= image %>" alt="Pokenea Image" style="height: 500px;" />
+        <p>Frase Filosófica: <%= philosophicalPhrase %></p>
         <p>Container ID: <%= containerId %></p>
     </div>
 </body>
