little spanglish fixing

--- a/views/pokeneas/imageAndPhrase.ejs
+++ b/views/pokeneas/imageAndPhrase.ejs
@@ -9,7 +9,7 @@
     <div>
         <img src="<%= image %>" alt="Pokenea Image" style="height: 500px;" />
         <p>Frase Filosófica: <%= philosophicalPhrase %></p>
-        <p>Container ID: <%= containerId %></p>
+        <p>ID contenedor <%= containerId %></p>
     </div>
 </body>
 </html>
